k8s/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: ecommerce
spec:
  selector:
    app: mongo
  ports:
    - name: mongo
      port: 27017
      targetPort: 27017
  type: ClusterIP
