k8s/nodeapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-app
  namespace: ecommerce
spec:
  type: ClusterIP
  selector:
    app: node-app
  ports:
    - name: http
      port: 80
      targetPort: 3000
